# research-materials

./: .env.example  .gitignore  .gitmodules  ITERATION_C2_COMPLETE.md  ITERATION_C2_VALIDATION_COMPLETE.md  LLM Trust Bench_ Research & Implementation.md  Literature Review_ Behavioral Economics Experiments and Large Language Models.docx  QUICKSTART.md  README.md  SESSION_SUMMARY.md  pyproject.toml
configs/: xie_micro.yaml  xie_mvp.yaml
data/personas/: README.md  xie_53.jsonl  xie_examples.jsonl
experiments/: merge_xie_results.py  run_trust_study.py  run_xie_replication.py
knowledge_library/: index.csv  index.json
knowledge_library/web/: create_t3_gg_introduction.md  en_wikipedia_org_Diamond_E2_80_93Dybvig_model.md  github_com_agent_trust.md  github_com_skatebench.md  ideas_repec_org_2301_07543_html.md  news_stanford_edu_ai_social_science_research_simulated_human_subjects.md  searchengineland_com_google_token_auction_llms_write_ads_real_time_457698.md  www_jstage_jst_go_jp_en.md  (+4 more)
notes/: 00_project_memory.md  STATUS.md  iteration_a_report.md  run_registry.csv  step2_repo_inventory.md
plans/: 01_paper_shortlist.csv  01b_extraction_queue.md  02a_design_accumulator.md  04_agent_trust_integration.md  05_paper_repo_alignment.md
scripts/: run_trustbench.py
specs/: 00_experiment_config.schema.json  00_llm_interface.md  01_runner_schema.json  03_openrouter_env.md  05_model_registry.json
src/: openrouter_client.py
tests/: test_parser.py  test_payoffs.py  test_repair_parsing.py
tools/: build_knowledge_library.py  test_openrouter_agent_trust.py
(+1245 files in other folders)
