[project]
name = "llm-applied-economics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fatihkarahan", email = "sekanti02@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.14.4",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
