[project]
name = "llm-applied-economics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fatihkarahan", email = "sekanti02@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "camel-ai==0.1.1",
    "instructor>=0.5.2,<1.0.0",
    "openai>=1.12.0,<2.0.0",
    "pydantic>=2.6.1,<3.0.0",
    "python-dotenv>=1.2.1",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
